Updates for OpenCalc since publishing.

+ New Feature
* Bug Fix

January 30, 2015
* Fixed bug where function entries from keypad weren't being calculated properly.

February 3, 2015
+ Added Line Graphs. (Currently broken: Not displaying proper values).
+ Added support for asynchronous calculations (to prevent ANRs on potentially large calculations).
* Fixed bug with Variable tokenization.