@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dev.opencalc"
-    android:versionCode="2"
-    android:versionName="1.1" 
+    android:versionCode="4"
+    android:versionName="1.21" 
     android:allowBackup="false">
 
     <uses-sdk
