@@ -7,6 +7,9 @@ January 30, 2015
 * Fixed bug where function entries from keypad weren't being calculated properly.
 
 February 3, 2015
-+ Added Line Graphs. (Currently broken: Not displaying proper values).
++ Added Future support for Line Graphs. (Currently broken: Not displaying proper values).
 + Added support for asynchronous calculations (to prevent ANRs on potentially large calculations).
 * Fixed bug with Variable tokenization.
+
+February 11, 2015
+* Fixed bug with multiply operator performing subtraction operation. (that was bad...)
